@@ -1,19 +1,2 @@
-.deps
-.libs
-Makefile
-Makefile.in
-aclocal.m4
-autom4te.cache
 build
-config
-config.h
-config.h.in
-config.log
-config.status
-configure
-libtool
-stamp-h1
-*.l[ao]
-*.o
-INSTALL
 cscope.*
