@@ -1,52 +1,0 @@
-#                                               -*- Autoconf -*-
-# Process this file with autoconf to produce a configure script.
-
-AC_PREREQ(2.59)
-AC_INIT([avro-c], m4_esyscmd([./version.sh project]), [http://issues.apache.org/jira/browse/AVRO])
-AC_CONFIG_AUX_DIR([config])
-AM_INIT_AUTOMAKE
-AC_CONFIG_SRCDIR([src/avro.h])
-AC_CONFIG_MACRO_DIR([m4])
-AC_CONFIG_HEADER([config.h])
-
-LIBAVRO_VERSION=m4_esyscmd([./version.sh libtool])
-AC_SUBST(LIBAVRO_VERSION)
-AC_DEFINE_UNQUOTED(LIBAVRO_VERSION, $LIBAVRO_VERSION, [Libtool version info for libavro])
-
-# Checks for programs.
-AC_PROG_CC
-AC_PROG_CXX
-AM_PROG_CC_C_O
-AC_PROG_LIBTOOL
-
-# Checks for header files.
-AC_HEADER_STDC
-AC_CHECK_HEADERS([limits.h stdint.h stdlib.h string.h])
-
-# Checks for typedefs, structures, and compiler characteristics.
-AC_C_CONST
-AC_TYPE_SIZE_T
-
-AC_CONFIG_FILES([
-   Makefile
-   tests/Makefile
-   docs/Makefile
-   src/Makefile
-   examples/Makefile
-   src/avro-c.pc
-])
-AC_CONFIG_SUBDIRS([jansson])
-AC_OUTPUT
-
-echo
-echo
-# figlet -f slant "Avro C"
-echo "    ___                      ______"
-echo "   /   |_   ___________     / ____/"
-echo "  / /| | | / / ___/ __ \   / /     "
-echo " / ___ | |/ / /  / /_/ /  / /___   "
-echo "/_/  |_|___/_/   \____/   \____/   "
-echo
-echo "Version: $VERSION"
-echo "Library: $LIBAVRO_VERSION" 	       
-echo
