@@ -1,14 +1,0 @@
-# -pedantic
-AM_CPPFLAGS=-I$(top_srcdir)/src 
-AM_CFLAGS=-Wall -Wextra -Wunused-parameter
-ACLOCAL_AMFLAGS=-I m4
-
-check_PROGRAMS=quickstop
-TESTS=$(check_PROGRAMS)
-
-examples_LDADD=$(top_builddir)/src/libavro.la
-
-quickstop_SOURCES=quickstop.c
-quickstop_LDADD=$(examples_LDADD)
-
-CLEANFILES=quickstop.db
