@@ -1,7 +1,1 @@
-config.guess
-config.sub
-depcomp
-install-sh
-ltmain.sh
-missing
 jansson.pc
